[gd_scene load_steps=6 format=3 uid="uid://4whpvx36wsog"]

[ext_resource type="Script" uid="uid://bvwjv80vqx52q" path="res://scripts/push_block.gd" id="1_0obic"]
[ext_resource type="Texture2D" uid="uid://dvf6v51x66v76" path="res://assets/terrains/Assets/prop_box.tres" id="2_t46rb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vt1s"]
size = Vector2(28, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yh5n5"]
size = Vector2(35, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e12w1"]
size = Vector2(34, 28)

[node name="Push Block" type="CharacterBody2D"]
collision_mask = 17
script = ExtResource("1_0obic")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t46rb")

[node name="MainCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_5vt1s")

[node name="Left" type="Area2D" parent="."]

[node name="LeftCollision" type="CollisionShape2D" parent="Left"]
position = Vector2(-13.5, 0.5)
shape = SubResource("RectangleShape2D_yh5n5")

[node name="Right" type="Area2D" parent="."]

[node name="RightCollision" type="CollisionShape2D" parent="Right"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_e12w1")

[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_left_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_right_body_exited"]
